deploy: 02de84c94e50145604a9187fdfa1460a155bb723

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             </ul>
             <h1>Specific versions</h1>
             <ul>
+    <li><a href="stable/0.15/docs">0.15</a></li>
+
     <li><a href="stable/0.14/docs">0.14</a></li>
 
     <li><a href="stable/0.10/docs">0.10</a></li>
@@ -38,11 +40,11 @@
         <h2>Miscellaneous</h2>
         <section class="docblock">
             <ul>
-                <li><a href="https://github.com/gtk-rs/gtk-rs-core">Repository</a></li>
+                <li><a href="https://github.com/jf2048/gtk-rs-core">Repository</a></li>
             </ul>
         </section>
         <footer>
-            Generated Mon Nov  8 13:17:58 2021 UTC
+            Generated Wed May 18 16:20:03 2022 UTC
         </footer>
     </body>
 </html>
