deploy: f8baf06c476862631e71b3763f6e2fc91c689536

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             </ul>
             <h1>Specific versions</h1>
             <ul>
+    <li><a href="stable/0.16/docs">0.16</a></li>
+
     <li><a href="stable/0.15/docs">0.15</a></li>
 
     <li><a href="stable/0.14/docs">0.14</a></li>
@@ -44,7 +46,7 @@
             </ul>
         </section>
         <footer>
-            Generated Wed May 18 16:20:03 2022 UTC
+            Generated Sun Nov 27 16:30:57 2022 UTC
         </footer>
     </body>
 </html>
